[gd_scene load_steps=33 format=2]

[ext_resource path="res://UI/TopBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/TileSelectorModal.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/CustomCursor.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/TileViewDialog.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Tooltip.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI.gd" type="Script" id=6]
[ext_resource path="res://UI/Lab.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/Grayscale.shader" type="Shader" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Pending"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TileSelectorModal:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 68 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "SlideDown"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TileSelectorModal:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 36 ), Vector2( 0, 68 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_selector_slide_down_complete"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "SlideLeft"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TileSelectorModal:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 36 ), Vector2( -64, 36 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_selector_slide_left_complete"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TileSelectorModal:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 68 ), Vector2( 0, 36 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_selector_slide_up_complete"
} ]
}

[sub_resource type="ShaderMaterial" id=14]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/grayscale = false

[sub_resource type="ShaderMaterial" id=15]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/grayscale = false

[sub_resource type="ShaderMaterial" id=16]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/grayscale = false

[sub_resource type="ShaderMaterial" id=17]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/grayscale = true

[sub_resource type="Animation" id=5]
resource_name = "Pending"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TileViewDialog:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 64, 36 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "SlideLeft"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TileViewDialog:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 64, 36 ), Vector2( 0, 36 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_view_slide_left_complete"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "SlideRight"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TileViewDialog:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 36 ), Vector2( 64, 36 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_view_slide_right_complete"
} ]
}

[sub_resource type="ShaderMaterial" id=18]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/grayscale = false

[sub_resource type="ShaderMaterial" id=19]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/grayscale = false

[sub_resource type="ShaderMaterial" id=20]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/grayscale = false

[sub_resource type="ShaderMaterial" id=21]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/grayscale = false

[sub_resource type="Animation" id=8]
resource_name = "Pending"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Tooltip:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -17 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "SlideDown"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Tooltip:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -17 ), Vector2( 0, 8 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_tooltip_slide_down_complete"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "SlideUp"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Tooltip:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 8 ), Vector2( 0, -25 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_tooltip_slide_up_complete"
} ]
}

[sub_resource type="ShaderMaterial" id=22]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/grayscale = false

[sub_resource type="ShaderMaterial" id=23]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/grayscale = false

[sub_resource type="Animation" id=11]
resource_name = "Pending"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Lab:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -64, 8 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "SlideLeft"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Lab:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 8 ), Vector2( -64, 8 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_lab_slide_left_complete"
} ]
}

[sub_resource type="Animation" id=13]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Lab:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -64, 8 ), Vector2( 0, 8 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_lab_slide_right_complete"
} ]
}

[sub_resource type="ShaderMaterial" id=24]
resource_local_to_scene = true
shader = ExtResource( 8 )
shader_param/grayscale = false

[node name="UI" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="SelectorAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Pending"
anims/Pending = SubResource( 1 )
anims/SlideDown = SubResource( 2 )
anims/SlideLeft = SubResource( 3 )
anims/SlideUp = SubResource( 4 )

[node name="TileSelectorModal" parent="." instance=ExtResource( 2 )]
margin_top = 68.0
margin_bottom = 68.0

[node name="CloseButton" parent="TileSelectorModal/SelectionPanel/Panel" index="0"]
material = SubResource( 14 )

[node name="LeftButton" parent="TileSelectorModal/SelectionPanel/Panel" index="1"]
material = SubResource( 15 )

[node name="RightButton" parent="TileSelectorModal/SelectionPanel/Panel" index="5"]
material = SubResource( 16 )

[node name="AcceptButton" parent="TileSelectorModal/SelectionPanel/Panel" index="6"]
material = SubResource( 17 )

[node name="ViewAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Pending"
anims/Pending = SubResource( 5 )
anims/SlideLeft = SubResource( 6 )
anims/SlideRight = SubResource( 7 )

[node name="TileViewDialog" parent="." instance=ExtResource( 4 )]
margin_left = 64.0
margin_top = 36.0
margin_right = 64.0
margin_bottom = 0.0

[node name="CloseButton" parent="TileViewDialog/InfoPanel" index="0"]
material = SubResource( 18 )

[node name="Lvl-1Button" parent="TileViewDialog/InfoPanel/PowerMeter" index="1"]
material = SubResource( 19 )

[node name="DestroyButton" parent="TileViewDialog/InfoPanel" index="3"]
material = SubResource( 20 )

[node name="ClearButton" parent="TileViewDialog/InfoPanel" index="4"]
material = SubResource( 21 )

[node name="TooltipAnimator" type="AnimationPlayer" parent="."]
autoplay = "Pending"
anims/Pending = SubResource( 8 )
anims/SlideDown = SubResource( 9 )
anims/SlideUp = SubResource( 10 )

[node name="Tooltip" parent="." instance=ExtResource( 5 )]
margin_top = -25.0
margin_bottom = -1.0

[node name="TopBar" parent="." instance=ExtResource( 1 )]

[node name="UpgradeButton" parent="TopBar" index="4"]
material = SubResource( 22 )

[node name="OptionsButton" parent="TopBar" index="5"]
material = SubResource( 23 )

[node name="LabAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Pending"
anims/Pending = SubResource( 11 )
anims/SlideLeft = SubResource( 12 )
anims/SlideRight = SubResource( 13 )

[node name="Lab" parent="." instance=ExtResource( 7 )]
margin_left = -64.0
margin_top = 8.0
margin_right = -64.0
margin_bottom = 0.0

[node name="Close" parent="Lab" index="1"]
material = SubResource( 24 )

[node name="CustomCursor" parent="." instance=ExtResource( 3 )]
[connection signal="click" from="TileSelectorModal/SelectionPanel/Panel/CloseButton" to="." method="_on_TileSelectorCloseButton_click"]
[connection signal="click" from="TileSelectorModal/SelectionPanel/Panel/AcceptButton" to="." method="_on_TileSelectorAcceptButton_click"]
[connection signal="click" from="TileViewDialog/InfoPanel/CloseButton" to="." method="_on_TileViewCloseButton_click"]
[connection signal="click" from="TileViewDialog/InfoPanel/DestroyButton" to="TileViewDialog" method="_on_DestroyButton_click"]
[connection signal="click" from="TileViewDialog/InfoPanel/DestroyButton" to="." method="_on_TileDestroyButton_click"]
[connection signal="click" from="TileViewDialog/InfoPanel/ClearButton" to="TileViewDialog" method="_on_ClearButton_click"]
[connection signal="click" from="TopBar/UpgradeButton" to="." method="_on_UpgradeButton_click"]
[connection signal="click" from="Lab/Close" to="." method="_on_Lab_Close_click"]

[editable path="TileSelectorModal"]

[editable path="TileViewDialog"]

[editable path="TopBar"]

[editable path="Lab"]
